UV of closed curves don't have V-space split after converting to mesh #37465

Closed
opened 2013-11-15 04:55:43 +01:00 by Leon Cheung · 6 comments
Member

System Information
Win7 64 bit | FX2700M

Blender Version
Broken: Blender 2.69 r61240
Worked: Blender Not found yet.

Short description of error
When converting closed curve to mesh, U could be split automatically, but V cannot, it can be more easily confirmed by using "Seams from Islands" feature in UV/Image Editor.

Exact steps for others to reproduce the error
Please see attachement for easy understanding, Thanks!
UV.png UV_for_mapping.blend

**System Information** Win7 64 bit | FX2700M **Blender Version** Broken: Blender 2.69 r61240 Worked: Blender Not found yet. **Short description of error** When converting closed curve to mesh, U could be split automatically, but V cannot, it can be more easily confirmed by using "Seams from Islands" feature in UV/Image Editor. **Exact steps for others to reproduce the error** Please see attachement for easy understanding, Thanks! ![UV.png](https://archive.blender.org/developer/F27396/UV.png) [UV_for_mapping.blend](https://archive.blender.org/developer/F27398/UV_for_mapping.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

This issue was referenced by blender/blender-addons-contrib@0469971b05

This issue was referenced by blender/blender-addons-contrib@0469971b05ea94b9bf9ea3c8e935049c5c5b7120

This issue was referenced by 0469971b05

This issue was referenced by 0469971b05ea94b9bf9ea3c8e935049c5c5b7120

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0469971b05.

Closed by commit 0469971b05.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37465
No description provided.