Fix T37465: UV Coords we're incorrect when converting from a curve