source/blender/blenkernel/intern/mesh.c
@@ -1351,6 +1351,8 @@ int BKE_mesh_nurbs_displist_to_mdata(Object *ob, ListBase *dispbase,
 							mloopuv->uv[1] = (v % dl->nr) / (float)orco_sizeu;
 
 							/* cyclic correction */
+							if ((i == 1 || i == 2) && mloopuv->uv[0] == 0.0f)
+								mloopuv->uv[0] = 1.0f;
 							if ((i == 0 || i == 1) && mloopuv->uv[1] == 0.0f)
 								mloopuv->uv[1] = 1.0f;
 						}
